JDK-8009723 : CMS logs "concurrent mode failure" twice when using (disabling) -XX:-UseCMSCompactAtFullCollection
  • Type: Bug
  • Component: hotspot
  • Sub-Component: gc
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2013-03-08
  • Updated: 2013-06-26
  • Resolved: 2013-03-11
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Description
CMS logs "(concurrent mode failure)" in two places in the code, and with 
-XX:-UseCMSCompactAtFullCollection they can both appear for the same
event.

e.g.
3.641: [CMS-concurrent-mark-start]
3.655: [Full GC (System) 3.655: [ParNew: 18431K->18431K(18432K), 0.0000190 secs]3.655: [CMS3.738: [CMS-concurrent-mark: 0.097/0.097 secs] [Times: user=0.09 sys=0.00, real=0.10 secs] 
 (concurrent mode interrupted) (concurrent mode failure)[YG occupancy: 18431 K (18432 K)]3.738: [Rescan (parallel) ...etc...

Clearly the second printing is undesirable.