8009723: CMS logs "concurrent mode failure" twice when using (disabling) -XX:-UseCMSCompactAtFullCollection

Reviewed-by: jwilhelm, ehelin, brutisso